--- a/index.html
+++ b/index.html
@@ -358,15 +358,15 @@
             
             <div class="bg-white rounded-xl shadow-lg overflow-hidden">
                 <div class="h-96 w-full">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105935.2424690369!2d-5.902559349999999!3d35.75946505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0b875cf04c132d%3A0x76bfc571bfb4e17a!2sTangier%2C%20Morocco!5e0!3m2!1sen!2s!4v1700000000000!5m2!1sen!2s" 
-                        width="100%" 
-                        height="100%" 
-                        style="border:0;" 
-                        allowfullscreen="" 
-                        loading="lazy" 
+            <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3237.7032369672856!2d-5.847933725158949!3d35.75809822574923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0b87f7b3666b1f%3A0x6172d0132a4717f5!2sJoudecar%20tanger!5e0!3m2!1sen!2sma!4v1763648664728!5m2!1sen!2sma"
+                        width="100%"
+                        height="100%"
+                        style="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"
-                        title="Joudecar Tanger Location in Tangier, Morocco">
+                        title="Joudecar Tanger Location">
                     </iframe>
                 </div>
             </div>
