Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     <p class="text-gray-400" data-translate="hero-subtitle">Location de voitures rapide, abordable et fiable à Tanger</p>
                 </div>
                 
-                <div class="flex space-x-4">
+                <div class="flex gap-6">
                     <button onclick="window.open('https://wa.me/212701141248', '_blank')" class="w-10 h-10 bg-green-500 rounded-full flex items-center justify-center hover:bg-green-600 transition-colors">
                         <i class="fab fa-whatsapp"></i>
                     </button>
